added css webpack plugin and fix values sort

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -47,7 +47,7 @@ body
 
 .tgc-chart-wrapper__wrapper
   position: relative
-  height: 100%
+  // height: 100%
 
 .tgc-chart-wrapper__nav-wrapper
   position: relative
@@ -75,7 +75,7 @@ body
   height: calc(100% + 24px)
 
 .tgc-checkbox
-  position: relative
+  // position: relative
   margin: 12px 12px 0 0
 
   height: 30px
